deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cert-vault-server-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: cert-vault-server
  ports:
    - port: 8080
      targetPort: 8080
      name: http
